<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contactPageLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightGreyBkg"
    android:orientation="vertical"
    tools:context=".ContactPage">

    <include layout="@layout/contacts_toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/imageCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:background="@android:color/white">

            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                app:cardCornerRadius="45dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/contactImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_account_circle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/contactName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/contactWorkplace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/workplace"
                android:textColor="#5E5E5E"
                android:textSize="17sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/numberHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toEndOf="@+id/imageCardView"
        app:layout_constraintStart_toStartOf="@+id/imageCardView"
        app:layout_constraintTop_toBottomOf="@+id/imageCardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/contactNumber"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:gravity="center_vertical"
                android:paddingStart="4dp"
                android:text="@string/number"
                android:textColor="@android:color/black"
                android:drawableEnd="@drawable/ic_phone"
                android:paddingRight="10dp"
                android:textSize="16sp" />

            <!--<ImageButton
                android:id="@+id/videoCall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/ic_video_call" />-->

            <ImageButton
                android:id="@+id/textSMS"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/ic_textsms" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/functionsHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        app:layout_constraintEnd_toEndOf="@+id/detailsHolder"
        app:layout_constraintStart_toStartOf="@+id/detailsHolder"
        app:layout_constraintTop_toBottomOf="@+id/detailsHolder">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/shareContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="start|center_vertical"
                android:text="@string/shareContact"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/LightGreyBkg" />

            <Button
                android:id="@+id/deleteContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="start|center_vertical"
                android:text="@string/deleteContact"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>