<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightGreyBkg"
    android:orientation="vertical"
    tools:context=".NewContact">

    <include layout="@layout/contacts_toolbar" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp">
        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            app:cardCornerRadius="45dp"
            android:background="@android:color/transparent"
            app:cardElevation="0dp">
            <ImageButton
                android:id="@+id/addImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/ic_add"
                android:scaleType="centerCrop"
                android:background="@android:color/transparent"/>

        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="12dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/addName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/LightGreyBkg" />

            <EditText
                android:id="@+id/addWorkplace"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/workplace"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/addNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:drawableStart="@drawable/ic_add_circle"
            android:ems="10"
            android:hint="@string/addNumber"
            android:inputType="phone"
            android:paddingStart="5dp"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>
</LinearLayout>